--- a/backend/env.example
+++ b/backend/env.example
@@ -1,15 +1,23 @@
-# ===========================
-# DATABASE CONFIGURATION
-# ===========================
+# LLM APIs
+OPENAI_API_KEY=your_openai_key_here
+GOOGLE_API_KEY=your_google_key_here
+COHERE_API_KEY=your_cohere_key_here
+TOGETHER_API_KEY=your_together_key_here
+
+# Database Credentials
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=dashboard_mvp
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+DB_USER=postgres
+DB_PASSWORD=#STARboy#1234
 
-# ===========================
-# FASTAPI / SERVER CONFIG
-# ===========================
+# Logging
+BASE_LOG_DIR=logs
+
+# Server Settings
 APP_HOST=0.0.0.0
 APP_PORT=8000
 DEBUG=True
+
+# Frontend
+FRONTEND_URL=http://localhost:3000
